# agent-skill-fcontext

./: .gitignore  LICENSE  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: release.yml
docs/: architecture.md  commands.md  contributing.md  features.md  getting-started.md  index.md
fcontext/: __init__.py  cli.py  experience.py  indexer.py  init.py  requirements.py  topics.py  workspace_map.py
tests/: conftest.py  test_cli.py  test_enable.py  test_experience.py  test_index.py  test_init.py  test_req.py  test_reset.py  test_topic.py  test_workspace_map.py
