[build-system]
requires = ["setuptools>=68.0", "setuptools-scm>=8.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fcontext"
dynamic = ["version"]
description = "Context continuity across AI agents & sessions. Team knowledge collaboration. Industrial-grade AI delivery."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "Apache-2.0"}
dependencies = [
    "markitdown",
]

[project.scripts]
fcontext = "fcontext.cli:main"

[project.optional-dependencies]
test = [
    "pytest>=7.0",
    "pytest-cov>=5.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
    "--cov=fcontext",
    "--cov-report=term-missing",
    "--cov-fail-under=100",
]
filterwarnings = [
    "ignore::DeprecationWarning:pytz",
]

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools_scm]
write_to = "fcontext/_version.py"
